Add S2Random class for testing